--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 color=red;>Hello World </h1>
+    <h1 color="red">Hello World </h1>
     <p>HTML in Visual Studio Code
         You can trigger suggestions at any time by pressing Ctrl+Space.
         To improve the formatting of your HTML source code, you can use the Format Document command Ctrl+Shift+I to format the entire file or Format Selection Ctrl+K Ctrl+F to just format the selected text.</p>
