--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Learning</title>
 </head>
 <body>
-    <h1>Hello World </h1>
-    <p>HTML in Visual Studio Code
+    <header>
+        <nav>
+            <ul>
+            <li>About</li>
+            <li>Support</li>
+            <li>Login</li>
+        </ul>
+        </nav>
+    </header>
+    <h1>&lt;Welcome!&gt;</h1>
+    <div>Welcome to HTML, CSS, and Javascript for Web Developers!
+        Development Environment Setup</div>
+
+        <p>&quot; HTML in Visual Studio Code
         You can trigger suggestions at any time by pressing Ctrl+Space.
-        improve the formatting of your HTML source code, you can use the Format Document command Ctrl+Shift+I to format the entire file or Format Selection Ctrl+K Ctrl+F to just format the selected text.</p>
+        improve the formatting of your HTML source code, you can use the Format Document command Ctrl+Shift+I to format the entire file or Format Selection Ctrl+K Ctrl+F to just format the selected text.&quot;</p>
+<footer>&copy; Copy Right 1910</footer>
 </body>
 </html>
