--- a/index.html
+++ b/index.html
@@ -16,13 +16,51 @@
         </ul>
         </nav>
     </header>
-    <h1>&lt;Welcome!&gt;</h1>
+    <h1 id="top"> &lt;Welcome!&gt;</h1>
     <div>Welcome to HTML, CSS, and Javascript for Web Developers!
         Development Environment Setup</div>
 
         <p>&quot; HTML in Visual Studio Code
         You can trigger suggestions at any time by pressing Ctrl+Space.
         improve the formatting of your HTML source code, you can use the Format Document command Ctrl+Shift+I to format the entire file or Format Selection Ctrl+K Ctrl+F to just format the selected text.&quot;</p>
-<footer>&copy; Copy Right 1910</footer>
+        <section> 
+            <a href="section1">Section 1</a>
+            <a href="section2">section 2</a>
+        </section>
+        <section id="section1">
+            Best Inspirational Paragraphs, Sentences and Messages
+Best motivational words and motivational paragraphs you can send to your lover, friends and loved ones that will give them courage and desire to be at their best today and forever is heart touching inspiring quotes and messages.
+
+1. Every great accomplishment in life is traceable to certain nuggets that make things work. It is the application of these nuggets that determine one’s success in life.
+        </section>
+        <section id="section2"> 
+            Best Inspirational Paragraphs, Sentences and Messages
+Best motivational words and motivational paragraphs you can send to your lover, friends and loved ones that will give them courage and desire to be at their best today and forever is heart touching inspiring quotes and messages.
+
+1. Every great accomplishment in life is traceable to certain nuggets that make things work. It is the application of these nuggets that determine one’s success in life.
+Best Inspirational Paragraphs, Sentences and Messages
+Best motivational words and motivational paragraphs you can send to your lover, friends and loved ones that will give them courage and desire to be at their best today and forever is heart touching inspiring quotes and messages.
+
+1. Every great accomplishment in life is traceable to certain nuggets that make things work. It is the application of these nuggets that determine one’s success in life.
+Best Inspirational Paragraphs, Sentences and Messages
+Best motivational words and motivational paragraphs you can send to your lover, friends and loved ones that will give them courage and desire to be at their best today and forever is heart touching inspiring quotes and messages.
+
+1. Every great accomplishment in life is traceable to certain nuggets that make things work. It is the application of these nuggets that determine one’s success in life.
+Best Inspirational Paragraphs, Sentences and Messages
+Best motivational words and motivational paragraphs you can send to your lover, friends and loved ones that will give them courage and desire to be at their best today and forever is heart touching inspiring quotes and messages.
+
+1. Every great accomplishment in life is traceable to certain nuggets that make things work. It is the application of these nuggets that determine one’s success in life.
+Best Inspirational Paragraphs, Sentences and Messages
+Best motivational words and motivational paragraphs you can send to your lover, friends and loved ones that will give them courage and desire to be at their best today and forever is heart touching inspiring quotes and messages.
+
+1. Every great accomplishment in life is traceable to certain nuggets that make things work. It is the application of these nuggets that determine one’s success in life.
+Best Inspirational Paragraphs, Sentences and Messages
+Best motivational words and motivational paragraphs you can send to your lover, friends and loved ones that will give them courage and desire to be at their best today and forever is heart touching inspiring quotes and messages.
+
+1. Every great accomplishment in life is traceable to certain nuggets that make things work. It is the application of these nuggets that determine one’s success in life.
+        </section>
+        <p> Back to Top <a href="top"></a>
+             </p>
+        <footer>&copy; Copy Right 1910</footer>
 </body>
 </html>
