--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ Best motivational words and motivational paragraphs you can send to your lover, 
 
 1. Every great accomplishment in life is traceable to certain nuggets that make things work. It is the application of these nuggets that determine one’s success in life.
         </section>
-        <section id="section2"> 
-            Best Inspirational Paragraphs, Sentences and Messages
+        <section id="section2"> section 1 
+            <p>Best Inspirational Paragraphs, Sentences and Messages
 Best motivational words and motivational paragraphs you can send to your lover, friends and loved ones that will give them courage and desire to be at their best today and forever is heart touching inspiring quotes and messages.
 
 1. Every great accomplishment in life is traceable to certain nuggets that make things work. It is the application of these nuggets that determine one’s success in life.
@@ -57,7 +57,7 @@ Best motivational words and motivational paragraphs you can send to your lover, 
 Best Inspirational Paragraphs, Sentences and Messages
 Best motivational words and motivational paragraphs you can send to your lover, friends and loved ones that will give them courage and desire to be at their best today and forever is heart touching inspiring quotes and messages.
 
-1. Every great accomplishment in life is traceable to certain nuggets that make things work. It is the application of these nuggets that determine one’s success in life.
+1. Every great accomplishment in life is traceable to certain nuggets that make things work. It is the application of these nuggets that determine one’s success in life.</p>
         </section>
         <p> Back to Top <a href="top"></a>
              </p>
