--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Best motivational words and motivational paragraphs you can send to your lover, 
 
 1. Every great accomplishment in life is traceable to certain nuggets that make things work. It is the application of these nuggets that determine one’s success in life.</p>
         </section>
+        <img src="Quaid.jfif" width="400" height="300" alt="Picture">
         <section id="section2">
             <h2>Section 2</h2> 
             <p>Best Inspirational Paragraphs, Sentences and Messages
@@ -85,6 +86,6 @@ Best motivational words and motivational paragraphs you can send to your lover, 
         </section>
         <p> Back to <a href="#top">Top</a>
              </p>
-        <footer>&copy; Copy Right 1910</footer>
+        <footer>Quaid e Azam 1910&copy; Copy Right</footer>
 </body>
 </html>
