--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         You can trigger suggestions at any time by pressing Ctrl+Space.
         improve the formatting of your HTML source code, you can use the Format Document command Ctrl+Shift+I to format the entire file or Format Selection Ctrl+K Ctrl+F to just format the selected text.&quot;</p>
         <section> 
-            <a href="#section1">Section 1</a>
-            <a href="#section2">section 2</a>
+           <li> <a href="#section1">Section 1</a></li>
+            <li><a href="#section2">section 2</a></li>
         </section>
         <section id="section1">
             Best Inspirational Paragraphs, Sentences and Messages
@@ -73,7 +73,7 @@ Best motivational words and motivational paragraphs you can send to your lover, 
 1. Every great accomplishment in life is traceable to certain nuggets that make things work. It is the application of these nuggets that determine one’s success in life.
 Best Inspirational Paragraphs, Sentences and Messages
 Best motivational words and motivational paragraphs you can send to your lover, friends and loved ones that will give them courage and desire to be at their best today and forever is heart touching inspiring quotes and messages.
-
+<img src="Quaid 2.jpg" width="500" height="400" alt="Picture">
 1. Every great accomplishment in life is traceable to certain nuggets that make things work. It is the application of these nuggets that determine one’s success in life.
 Best Inspirational Paragraphs, Sentences and Messages
 Best motivational words and motivational paragraphs you can send to your lover, friends and loved ones that will give them courage and desire to be at their best today and forever is heart touching inspiring quotes and messages.
