--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ol>
             <li>About</li>
             <li>Support</li>
             <li>Login</li>
-        </ul>
+        </ol>
         </nav>
     </header>
-    <h1 id="top"> &lt;Welcome!&gt;</h1>
+    <h1 id="top">Welcome!</h1>
     <div>Welcome to HTML, CSS, and Javascript for Web Developers!
         Development Environment Setup</div>
 
@@ -24,8 +24,10 @@
         You can trigger suggestions at any time by pressing Ctrl+Space.
         improve the formatting of your HTML source code, you can use the Format Document command Ctrl+Shift+I to format the entire file or Format Selection Ctrl+K Ctrl+F to just format the selected text.&quot;</p>
         <section> 
+            <ol>
             <li><a href="#section1">Section 1</a></li>
             <li><a href="#section2">section 2</a></li>
+            </ol>
         </section>
         <section id="section1">
             Best Inspirational Paragraphs, Sentences and Messages
