--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             </ol>
         </section>
         <section id="section1">
+            <h1>Section 1</h1>
             Best Inspirational Paragraphs, Sentences and Messages
 Best motivational words and motivational paragraphs you can send to your lover, friends and loved ones that will give them courage and desire to be at their best today and forever is heart touching inspiring quotes and messages.
 
