--- a/index.html
+++ b/index.html
@@ -6,34 +6,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning</title>
     <style>
+     
         section{
             color: blue;
             font-size: larger;
             text-align: center;
-        
         }
+        h1{
+            color: black;
+            font-style: italic;
+        }
+        #top{
+            text-align: center;
+            font-size: 100px;
+        }
+         a{
+            color: green;
+            font-size: 50px;
+            text-decoration: none;
+        }
+        p{
+            color: black;
+            font-size: larger;
+        }
+        ol{
+            text-decoration: none;
+            list-style: none;
+        }
+        ul{
+            text-align: center;
+            list-style: none;
+          }
+        li{
+            font-size: 20px;
+            text-align: center;
+          }
+          img{
+            position: relative;
+            width: 500px;
+            height:auto; 
+          }
+
     </style>
 </head>
 <body>
     <header>
         <nav>
-            <ol>
+            <ul>
             <li>About</li>
             <li>Support</li>
             <li>Login</li>
-        </ol>
+        </ul>
         </nav>
     </header>
     <h1 id="top">Welcome!</h1>
         <section> 
             <ol>
             <li><a href="#section1">Section 1</a></li>
-            <li><a href="#section2">section 2</a></li>
+            <li><a href="#section2">Section 2</a></li>
             </ol>
         </section>
         <section id="section1">
             <h1>Section 1</h1>
-            Best Inspirational Paragraphs, Sentences and Messages
+           <p> Best Inspirational Paragraphs, Sentences and Messages
 Best motivational words and motivational paragraphs you can send to your lover, friends and loved ones that will give them courage and desire to be at their best today and forever is heart touching inspiring quotes and messages.
 
 1. Every great accomplishment in life is traceable to certain nuggets that make things work. It is the application of these nuggets that determine one’s success in life.
@@ -61,9 +96,9 @@ Best motivational words and motivational paragraphs you can send to your lover, 
 
 1. Every great accomplishment in life is traceable to certain nuggets that make things work. It is the application of these nuggets that determine one’s success in life.</p>
         </section>
-        <img src="Quaid.jfif" width="400" height="300" alt="Picture">
+        <img src="Quaid.jfif"  alt="Picture">
         <section id="section2">
-            <h2>Section 2</h2> 
+            <h1>Section 2</h1> 
             <p>Best Inspirational Paragraphs, Sentences and Messages
 Best motivational words and motivational paragraphs you can send to your lover, friends and loved ones that will give them courage and desire to be at their best today and forever is heart touching inspiring quotes and messages.
 
@@ -78,7 +113,8 @@ Best motivational words and motivational paragraphs you can send to your lover, 
 1. Every great accomplishment in life is traceable to certain nuggets that make things work. It is the application of these nuggets that determine one’s success in life.
 Best Inspirational Paragraphs, Sentences and Messages
 Best motivational words and motivational paragraphs you can send to your lover, friends and loved ones that will give them courage and desire to be at their best today and forever is heart touching inspiring quotes and messages.
-<img src="Quaid 2.jpg" width="500" height="400" alt="Picture">
+<br>
+<img src="Quaid 2.jpg" alt="Picture">
 1. Every great accomplishment in life is traceable to certain nuggets that make things work. It is the application of these nuggets that determine one’s success in life.
 Best Inspirational Paragraphs, Sentences and Messages
 Best motivational words and motivational paragraphs you can send to your lover, friends and loved ones that will give them courage and desire to be at their best today and forever is heart touching inspiring quotes and messages.
