--- a/banner.html
+++ b/banner.html
@@ -101,7 +101,7 @@
        	</div>
        	<div class="gallary">
        		<ul>
-         		   <li>Histry
+         		   <li>Since 1975
          		   	<ul>
          		           <li>
          			<a href="#">Pending</a>
