--- a/banner.html
+++ b/banner.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>MY BANNER</title>
+	<title>MY Website</title>
 	<link rel="stylesheet" href="tahir.css">
 </head>
 <body>
