--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width" intial-scale="1">
 	<title>MY Website</title>
-	<link rel="stylesheet" href="bootstrap.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="tahir.css">
 </head>
 <body>
